--- a/publicaciones.html
+++ b/publicaciones.html
@@ -26,7 +26,7 @@ title: Publicaciones
 	<img src="{{ pub.img }}" alt="img of publication" />
       </a>
       {% else %}
-      <img src="{{ pub.img }}" alt="img of publication" />
+      <img src="{{ site.url }}{{ pub.img }}" alt="img of publication" />
       {% endif %}
     </div><!--/col-md -->
     {% endif %}
